# smart_dog

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  smart_dog_v1.c
main/audio/: audio_echo.c  inmp441_i2s.c  max98357_i2s.c
main/audio/include/: audio_echo.h  i2s_pins.h  inmp441_i2s.h  max98357_i2s.h  wav_format.h
main/network/: http_request.c  websocket_client.c  wifi.c
main/network/include/: http_request.h  websocket_client.h  wifi.h
main/sr/: sr.c
main/sr/include/: sr.h
